--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-# 배포환경(krampoline) - URL 주소 확인
-REACT_APP_API_URL=https://devdoc-backend-a9c04f690ebd.herokuapp.com
+# 배포환경
+REACT_APP_API_URL=http://54.180.141.220:8080
