--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,4 +3,16 @@ branch-defaults:
     environment: null
     group_suffix: null
 global:
+  application_name: frontend-crud-deploy-and-add-certificate-skill-career-project
+  branch: null
+  default_ec2_keyname: null
+  default_platform: Node.js 20 running on 64bit Amazon Linux 2023
+  default_region: ap-northeast-2
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: null
+  repository: null
+  sc: git
+  workspace_type: Application
