commit for deployment-3

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 # local
-REACT_APP_API_URL=http://prod-devdoc-api-service.ap-northeast-2.elasticbeanstalk.com
+REACT_APP_API_URL=http://api.dev-doc.co.kr
