--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-# 배포환경(krampoline) - URL 주소 확인
-REACT_APP_API_URL=http://prod-devdoc-api-service.ap-northeast-2.elasticbeanstalk.com
+# 배포 환경
+REACT_APP_API_URL=http://api.dev-doc.co.kr
