--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "devdoc-front-resume",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node" : "20.13.1" },
+  "engines": {
+    "node": "20.13.1"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
