--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "rimraf build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -74,6 +75,7 @@
     "@storybook/test": "^8.1.6",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
+    "rimraf": "^6.0.1",
     "storybook": "^8.1.6",
     "webpack": "^5.91.0"
   }
